@@ -140,7 +140,10 @@ CONFIG_PIC32MX_OC4=n
 CONFIG_PIC32MX_OC5=n
 CONFIG_PIC32MX_I2C1=n
 CONFIG_PIC32MX_I2C2=n
+CONFIG_PIC32MX_SPI1=n
 CONFIG_PIC32MX_SPI2=n
+CONFIG_PIC32MX_SPI3=n
+CONFIG_PIC32MX_SPI4=n
 CONFIG_PIC32MX_UART1=y
 CONFIG_PIC32MX_UART2=n
 CONFIG_PIC32MX_UART3=n
@@ -993,7 +996,7 @@ CONFIG_NSH_DISABLEBG=n
 CONFIG_NSH_ROMFSETC=n
 CONFIG_NSH_CONSOLE=y
 CONFIG_NSH_TELNET=n
-CONFIG_NSH_ARCHINIT=n
+CONFIG_NSH_ARCHINIT=y
 CONFIG_NSH_IOBUFFER_SIZE=512
 CONFIG_NSH_DHCPC=n
 CONFIG_NSH_NOMAC=n
